force-app/main/default/objects/Opportunity_Payment_Summary__c/Opportunity_Payment_Summary__c.object-meta.xml
<CustomObject>
    <label>Opportunity Payment Summary</label>
    <nameField>
        <label>Opportunity Payment Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Payment Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>