force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Authorization_Amount__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Amount__c</fullName>
    <label>Authorized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>