force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Authorization_Reversal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Reversal_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Authorization Reversed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>