force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Auto_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Auto_Card_Type__c</fullName>
    <label>Auto Card Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>