force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Available_to_Capture__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Capture__c</fullName>
    <formula>IF(
Gateway_Result_Code_Description__c == &apos;PROCESSOR_DECLINED&apos; || 
Gateway_Result_Code_Description__c == &apos;FAILED&apos; ||
Gateway_Result_Code_Description__c == &apos;AUTHORIZATION_EXPIRED&apos; ||
Gateway_Result_Code_Description__c == &apos;GATEWAY_REJECTED&apos; ||
Gateway_Result_Code_Description__c == &apos;SETTLEMENT_DECLINED&apos; ||
Gateway_Result_Code_Description__c == &apos;VOIDED&apos;, 
0, Authorization_Amount__c  -  (  Authorization_Reversal_Amount__c  +  Pending_Reverse_Auth_Amount__c  )  -  (  Captured_Amount__c  +  Pending_Capture_Amount__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available to Capture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>