force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Available_to_Refund__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Refund__c</fullName>
    <formula>Captured_Amount__c  -  (  Refunded_Amount__c  +  Pending_Capture_Amount__c  +  Pending_Refund_Amount__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available to Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>