force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Card_BIN__c.field-meta.xml
<CustomField>
    <fullName>Card_BIN__c</fullName>
    <label>Card BIN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>