force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Card_Category__c.field-meta.xml
<CustomField>
    <fullName>Card_Category__c</fullName>
    <label>Card Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>