force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Card_Last_Four__c.field-meta.xml
<CustomField>
    <fullName>Card_Last_Four__c</fullName>
    <label>Card Last Four</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>