force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Card_Payment_Method_Status__c.field-meta.xml
<CustomField>
    <fullName>Card_Payment_Method_Status__c</fullName>
    <label>Card Payment Method Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>InActive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>