force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Display_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Display_Card_Number__c</fullName>
    <label>Display Card Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>