force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Expiry_Month__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Month__c</fullName>
    <label>Expiry Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>