force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Expiry_Year__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Year__c</fullName>
    <label>Expiry Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>