force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Gateway_Date__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Date__c</fullName>
    <label>Gateway Date</label>
    <type>DateTime</type>
</CustomField>