force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Gateway_Result_Code__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Result_Code__c</fullName>
    <label>Gateway Result Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>