force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Gateway_Result_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Result_Code_Description__c</fullName>
    <label>Gateway Result Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>