force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Gateway_Token_Details__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Token_Details__c</fullName>
    <label>Gateway Token Details</label>
    <type>TextArea</type>
</CustomField>