force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Gateway_Token_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Token_Encrypted__c</fullName>
    <label>Gateway Token Encrypted</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>