force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/GatewayAvsCode__c.field-meta.xml
<CustomField>
    <fullName>GatewayAvsCode__c</fullName>
    <label>GatewayAvsCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>