force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/GatewayResultCode__c.field-meta.xml
<CustomField>
    <fullName>GatewayResultCode__c</fullName>
    <label>GatewayResultCode</label>
    <length>64</length>
    <type>Text</type>
</CustomField>