force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/GatewayResultCodeDescription__c.field-meta.xml
<CustomField>
    <fullName>GatewayResultCodeDescription__c</fullName>
    <label>GatewayResultCodeDescription</label>
    <type>TextArea</type>
</CustomField>