force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/GatewayToken__c.field-meta.xml
<CustomField>
    <fullName>GatewayToken__c</fullName>
    <label>GatewayToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>