force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Has_Order__c.field-meta.xml
<CustomField>
    <fullName>Has_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Order</label>
    <type>Checkbox</type>
</CustomField>