force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/HasOrder__c.field-meta.xml
<CustomField>
    <fullName>HasOrder__c</fullName>
    <formula>IF( Opportunity_Summary__r.Order_Generated__c == True, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Order</label>
    <type>Checkbox</type>
</CustomField>