force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Input_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Input_Card_Number__c</fullName>
    <label>Input Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>