force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/InteractionType__c.field-meta.xml
<CustomField>
    <fullName>InteractionType__c</fullName>
    <label>InteractionType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ReferencedRefund</fullName>
            </value>
            <value>
                <fullName>Authorization</fullName>
            </value>
            <value>
                <fullName>AuthorizationReversal</fullName>
            </value>
            <value>
                <fullName>Avs</fullName>
            </value>
            <value>
                <fullName>Capture</fullName>
            </value>
            <value>
                <fullName>CheckGiftCardBalance</fullName>
            </value>
            <value>
                <fullName>PostAuth</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Tokenize</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>