force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Last_Payment_Gateway_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Gateway_Message__c</fullName>
    <label>Last Payment Gateway Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>