force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/MAC_Address__c.field-meta.xml
<CustomField>
    <fullName>MAC_Address__c</fullName>
    <label>MAC Address</label>
    <length>32</length>
    <type>Text</type>
</CustomField>