force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>