force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Opportunity_Gateway_Log__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Gateway_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Gateway Log</label>
    <referenceTo>Opportunity_Gateway_Log__c</referenceTo>
    <relationshipLabel>Opportunity Payment Summaries</relationshipLabel>
    <relationshipName>Opportunity_Payment_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>