force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Opportunity_Summary__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Summary</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Payment Summaries</relationshipLabel>
    <relationshipName>Opportunity_Payment_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>