force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Opportunity_Summary_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Summary_Internal_Id__c</fullName>
    <externalId>true</externalId>
    <label>Opportunity Summary Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>