force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Opportunity Payment Summaries</relationshipLabel>
    <relationshipName>Opportunity_Payment_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>