force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Payment_Method_Address__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Address__c</fullName>
    <label>Payment Method Address</label>
    <type>Address</type>
</CustomField>