force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Payment_Method_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Details__c</fullName>
    <label>Payment Method Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>