force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Payment_Method_SubType__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_SubType__c</fullName>
    <label>Payment Method SubType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>