force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/PaymentGatewayLogNumber__c.field-meta.xml
<CustomField>
    <fullName>PaymentGatewayLogNumber__c</fullName>
    <displayFormat>A-{00000000}</displayFormat>
    <label>PaymentGatewayLogNumber</label>
    <type>AutoNumber</type>
</CustomField>