force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/PaymentLog_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>PaymentLog_Internal_Id__c</fullName>
    <externalId>true</externalId>
    <label>PaymentLog Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>