force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Pending_Capture_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Capture_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pending Capture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>