force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Processing_Mode__c.field-meta.xml
<CustomField>
    <fullName>Processing_Mode__c</fullName>
    <label>Processing Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>