force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Registered_Card_Email__c.field-meta.xml
<CustomField>
    <fullName>Registered_Card_Email__c</fullName>
    <label>Registered Card Email</label>
    <type>Email</type>
</CustomField>