force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/SalesforceReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SalesforceReferenceNumber__c</fullName>
    <label>SalesforceReferenceNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>