force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/SalesforceResultCode__c.field-meta.xml
<CustomField>
    <fullName>SalesforceResultCode__c</fullName>
    <label>SalesforceResultCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>PermanentFail</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
            <value>
                <fullName>RequiresReview</fullName>
            </value>
            <value>
                <fullName>Indeterminate</fullName>
            </value>
            <value>
                <fullName>SystemError</fullName>
            </value>
            <value>
                <fullName>ValidationError</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>