force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Start_Month__c</fullName>
    <label>Start Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>