force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Operation</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Timeout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>