force-app/main/default/objects/Opportunity_Payment_Summary__c/fields/transactionId__c.field-meta.xml
<CustomField>
    <fullName>transactionId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>transactionId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>