force-app/main/default/objects/Opportunity_Payment_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Available_to_Capture__c</columns>
    <columns>Authorization_Amount__c</columns>
    <columns>Last_Payment_Gateway_Message__c</columns>
    <columns>Gateway_Result_Code_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>